hphp/hack/test/typecheck/inout/inout_hint2.php.like_types.exp
File "inout_hint2.php", line 8, characters 8-15:
Invalid argument (Typing[4110])
File "inout_hint2.php", line 3, characters 29-34:
Expected string
File "inout_hint2.php", line 6, characters 23-26:
But got dynamic because it is an unenforceable type
File "inout_hint2.php", line 15, characters 8-15:
Invalid argument (Typing[4110])
File "inout_hint2.php", line 13, characters 39-44:
Expected string
File "inout_hint2.php", line 13, characters 23-53:
But got dynamic because it is an unenforceable type
